fix overflow on blocks page

--- a/assets/css/rtl-style.css
+++ b/assets/css/rtl-style.css
@@ -2264,6 +2264,8 @@ in the pattern library. (For things like fixed
 positioning, etc.)
 
 \*------------------------------------*/
+.pl.modal-visible {
+  overflow: auto; }
 .pl .tabs-with-filter {
   position: relative; }
 .pl .pagination {
