--- a/assets/sass/0_pattern-library/_pattern-overrides.scss
+++ b/assets/sass/0_pattern-library/_pattern-overrides.scss
@@ -9,6 +9,10 @@ positioning, etc.)
 
 .pl {
 
+  &.modal-visible {
+        overflow: auto; 
+    }
+
     .tabs-with-filter {
         position: relative;
         //margin-bottom: $base-spacing;
